--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -1,3 +1,8 @@
+@include media-query(1600px){
+    #contact{
+        overflow-x: hidden;
+    }
+}
 @include media-query(1430px) {
     header {
         height: 55px;
@@ -68,11 +73,24 @@
         }
     }
 }
-@include media-query(1100px){
-    .screen8 .areasContainer .areasList {
-        margin-bottom: 1%; 
+
+@include media-query(1300px) {
+    .workScreen.workScreen2 {
+        .image ~.image {
+            background-size: 130% auto;
+            ~.image {
+                background-size: cover;
+            }
+        }
     }
 }
+
+@include media-query(1100px) {
+    .screen8 .areasContainer .areasList {
+        margin-bottom: 1%;
+    }
+}
+
 @include media-query(1000px) {
     html {
         font-size: 50%;
@@ -113,8 +131,9 @@
         min-height: 0;
         padding: 5% 0;
     }
-    .screen8 h2 span{
-        display:block;
+
+    .screen8 h2 span {
+        display: block;
     }
 
     .screen8 .areasContainer .areasModal {
@@ -129,9 +148,11 @@
             max-height: 250px;
             min-height: 200px;
             cursor: pointer;
-            .unhovered{
+
+            .unhovered {
                 top: 150px;
             }
+
             .backIcon {
                 height: 70%;
             }
@@ -163,10 +184,14 @@
                     padding: 0;
                     margin-bottom: 20px;
                 }
-                .unhovered{
-                    opacity:1;
+
+                .unhovered {
+                    opacity: 1;
                 }
-                .hovered{opacity:0;}
+
+                .hovered {
+                    opacity: 0;
+                }
             }
         }
     }
@@ -342,7 +367,6 @@
         justify-items: center;
         grid-template-columns: repeat(2, 1fr);
     }
-
     .workScreen {
         grid-template-columns: 1fr 1fr;
         grid-template-rows: auto auto;
@@ -354,36 +378,49 @@
             .gradient {
                 grid-column: 2 / span 1;
 
+                .right {
+                    display: none;
+                }
+
                 &~.gradient {
                     grid-column: 1 / span 1;
                 }
             }
 
             .image {
-                display:none;
+                display: none;
+
                 &~.image {
-                    display:flex;
+                    display: flex;
                     grid-column: 1 / span 2;
                     grid-row: 2 / span 1;
+                    background-size:cover;
+
                     &~.image {
                         grid-column: 1 / span 1;
                         grid-row: 1 / span 1;
+                        background-size: 160%;
+                        padding-bottom:98%;
                     }
                 }
             }
         }
+
         &.workScreen3 {
             grid-template-rows: 1fr .5fr;
         }
+
         .image {
             grid-column: 1 / span 1;
+
             &~.image {
-                grid-column: 2 / span  1;
+                grid-column: 2 / span 1;
             }
         }
 
         .gradient {
             grid-column: 2 / span 1;
+
             &~.gradient {
                 grid-column: 1 / span 1;
                 grid-row: 2 / span 1;
@@ -430,90 +467,112 @@
         padding: 5% 6% 0 3%;
     }
 
-    .workScreen { //700px 
+    .workScreen {
+        //700px 
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: auto 1fr 1.3fr 1fr;;
-        
-        .gradient{
+        grid-template-rows: auto 1fr auto 1fr;
+        ;
+
+        .gradient {
             grid-column: 1 / span 2;
             grid-row: 1 / span 1;
-            .right, .left{
-                display:none;
+
+            .right,
+            .left {
+                display: none;
             }
-            .bottom{
-                display:flex;
+
+            .bottom {
+                display: flex;
             }
+
             &~.gradient {
                 grid-column: 1 / span 2;
                 grid-row: 3 / span 1;
-                &:before{
-                    display:none;
+
+                &:before {
+                    display: none;
                 }
             }
         }
-        .image{
+
+        .image {
             grid-column: 1 / span 2;
             grid-row: 2;
+
             &~.image {
                 grid-column: 1 / span 2;
                 grid-row: 4 / span 1;
+                padding-bottom: 65%;
+                height: 0;
             }
         }
 
         &.workScreen2 {
             grid-template-columns: 1fr 1fr;
-            grid-template-rows: 1fr 1fr 1fr; 
+            grid-template-rows: auto auto auto;
 
             .gradient {
                 grid-column: 1 / span 2;
                 grid-row: 1;
-                .right{
-                    display:none;
+
+                .right {
+                    display: none;
                 }
             }
 
             .image {
                 grid-column: 1 / span 1;
                 grid-row: 3 / span 1;
-                display:flex;
+                display: flex;
+
                 &~.image {
                     grid-column: 2 / span 1;
                     grid-row: 3 / span 1;
+                    padding-bottom: 95%;
+
                     &~.image {
                         grid-column: 1 / span 2;
                         grid-row: 2 / span 1;
+                        padding-bottom: 65%;
                     }
                 }
             }
         }
 
-        &.workScreen3 { //700px
+        &.workScreen3 {
+            //700px
             grid-template-columns: 1fr 1fr;
-            grid-template-rows: 1fr .5fr .5fr; 
+            grid-template-rows: auto auto auto;
 
             .gradient {
                 grid-column: 1 / span 2;
                 grid-row: 1;
-                .right{
-                    display:none;
+
+                .right {
+                    display: none;
                 }
             }
 
             .image {
                 grid-column: 1 / span 2;
                 grid-row: 3 / span 1;
-                display:flex;
+                display: flex;
+                height: 0;
+                padding-bottom: 50%;
+
                 &~.image {
-                    display:none;
+                    display: none;
+
                     &~.image {
                         grid-column: 1 / span 2;
                         grid-row: 2 / span 1;
-                        display:flex;
+                        display: flex;
                     }
                 }
             }
         }
-        
+
     }
 }
 
@@ -548,13 +607,14 @@
             }
         }
 
-        &~.locationContact{
+        &~.locationContact {
             margin-top: 0;
             align-items: flex-end;
+
             p {
                 font-size: 1.5rem;
             }
-        } 
+        }
     }
 
     #home h1 {
